--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.4",
     "@react-three/drei": "^9.120.8",
     "@react-three/fiber": "^8.17.12",
     "@readyplayerme/react-avatar-creator": "^0.5.0",
@@ -24,14 +27,17 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "elevenlabs-node": "^2.0.3",
-    "gsap": "^3.12.5",
+    "gsap": "^3.12.7",
     "leva": "^0.9.35",
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "openai": "^4.79.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.49.2",
+    "react-type-animation": "^3.2.0",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
