--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@types/three": "^0.172.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "clsx": "^2.1.0",
     "dotenv": "^16.4.7",
     "elevenlabs-node": "^2.0.3",
+    "framer-motion": "^12.0.0",
     "gsap": "^3.12.7",
     "leva": "^0.9.35",
     "lucide-react": "^0.302.0",
@@ -38,7 +39,7 @@
     "react-hook-form": "^7.49.2",
     "react-type-animation": "^3.2.0",
     "sonner": "^1.7.2",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.172.0",
     "zod": "^3.22.4",
