--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 
 # Testing and Coverage
 /coverage
-/bin
+# /bin
 # Next.js Build Output
 /.next/
 /out/
@@ -32,7 +32,7 @@ yarn-error.log*
 
 # TypeScript
 *.tsbuildinfo
-next-env.d.ts
+# next-env.d.ts
 
 # 3D Model Files
 # .fbx
