--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@readyplayerme/react-avatar-creator": "^0.5.0",
     "@types/gsap": "^1.20.2",
     "@types/three": "^0.172.0",
+    "@vercel/blob": "^0.27.1",
+    "@vercel/kv": "^3.0.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
